# financial-forecasting-engine

./: .env.example  .gitignore  BLOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
deck/: DECK.md  EXECUTIVE_SUMMARY.md  VALIDATION_REPORT.md
fce/: __init__.py  __main__.py  config.py  pipeline.py  projects.py  report.py
fce/accounting/: __init__.py  identities.py  statements.py
fce/backtest/: __init__.py  coverage.py  policy.py  splits.py
fce/drivers/: __init__.py  history.py  hmm.py
fce/ingest/: __init__.py  cache.py  eia.py  fred.py
fce/optimize/: __init__.py  allocate.py  frontier.py
fce/scenarios/: __init__.py  scm.py  whatif.py
fce/term_structure/: __init__.py  curves.py  debt.py  history.py  rates.py
fce/validate/: __init__.py  backtest.py  curves.py  ppc.py  report.py
notebooks/: 01_deterministic_accounting_core.ipynb
tests/: test_accounting_identities.py  test_drivers.py  test_optimize.py  test_report.py  test_scenarios.py  test_splits.py  test_term_structure.py  test_validate.py
